<resources>
    <string name="app_name">go4lunch</string>


    <string name="main_activity_description">Find a nice restaurant and invite your co-worker for lunch!</string>

    <string name="login">Connexion</string>
    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">You must connect!</string>
    <string name="error_authentication_canceled">Authentification canceled</string>
    <string name="error_no_internet">No internet!</string>
    <string name="error_unknown_error">Unknow error!</string>
    <string name="connection_succeed">Authentification succeed!</string>
    <string name="button_login_text_not_logged">Connexion</string>
    <string name="facebook_application_id">267466468173033</string>
    <string name="fb_login_protocol_scheme">fb267466468173033</string>
    <string name="info_no_username_found">no name found!</string>
    <string name="download">Downlading...</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="i_m_hungry">I\'m Hungry!</string>
    <string name="nav_drawer_mail">E-mail</string>

    <!-- mapBox -->
    <string name="mapbox_access_token">pk.eyJ1IjoibmV4aXNsdWNpcyIsImEiOiJja3MzMzkyNWsyOXIxMm9uOG05NjlnZTB3In0.C0x6L93b14FZC6oKQfcBrQ</string>

    <!-- detail activity -->
    <string name="style_restaurant">Style_restaurant</string>
    <string name="after_style">-</string>
    <string name="adress">Adress</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="restaurant_name">Restaurant_Name</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="mettre_jour_le_nom">update name</string>
    <string name="profile_name">profile_name</string>
    <string name="e_mail">E-mail</string>
    <string name="retour">Back</string>
    <string name="supprimer_le_compte">Delete account</string>
    <string name="default_notification_channel_id">0</string>
    <string name="notification">NOTIFICATION</string>
    <string name="button_login_text_logged">show profile</string>
    <string name="mapview">MapView</string>
    <string name="listview">ListView</string>
    <string name="workmates">WorkMates</string>
    <string name="searchRestaurant">Search Restaurants</string>
    <string name="availableWorkmate">Available Workmates</string>
    <string name="searchWorkmates">Search Workmates</string>
    <string name="noLunch" >No lunch chosen!</string>
    <string name="restaurantChosen" >Lunch chosen!</string>
    <string name="canceled" >Canceled</string>
    <string name="noUrl">no url found</string>
    <string name="noNumber">no number found</string>

    <!-- workmate item -->
    <string name="is_joining">is joining!</string>
    <string name="isEating">is eating</string>
    <string name="notDecided">has not decied yet</string>

    <string name="MAPS_API_KEY" translatable="false">AIzaSyC77ax8lhHQbeqgqiqJ7rqhJfCdEWE4FCk"></string>
    <string name="Open">open</string>
    <string name="closed">closed</string>
    <string name="filter">Filter</string>
    <string name="alphabetical">alphabetical</string>
    <string name="distance">distance</string>
    <string name="note">note</string>
</resources>